--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,16 @@
 logging:
   level:
     org.zalando.logbook: TRACE
+
+spring:
+  h2:
+    console:
+      enabled: true
+  sql:
+    init:
+      mode: always
+  datasource:
+    username: sa
+    url: jdbc:h2:file:./db/filmorate
+    driverClassName: org.h2.Driver
+    password: password
